--- a/2020_Dec_TUKS/_output.yml
+++ b/2020_Dec_TUKS/_output.yml
@@ -1,5 +1,5 @@
 xaringan::moon_reader:
-  css: ['robot', 'robot-fonts', 'mizzou.css']
+  css: ['robot', 'robot-fonts', 'custom.css']
   self_contained: true
   nature:
     highlightStyle: github
